日本語メッセージの追加

--- a/00_orientation/helloworld.ipynb
+++ b/00_orientation/helloworld.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b5f47b0f",
    "metadata": {},
    "outputs": [
@@ -17,6 +17,7 @@
    ],
    "source": [
     "print(\"Hello! World!\")\n",
+    "print(\"こんにちは！ 世界！\")\n",
     "print(\"こんにちは！ 世界！\")"
    ]
   },
