--- a/Lesson05_Data-Preprocessing/課題1：住宅価格のデータの前処理.ipynb
+++ b/Lesson05_Data-Preprocessing/課題1：住宅価格のデータの前処理.ipynb
@@ -2167,7 +2167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 69,
+      "execution_count": null,
       "metadata": {
         "id": "STACo5MN0Ltx"
       },
@@ -2276,7 +2276,7 @@
       "source": [
         "# すべての列がそれぞれ、欠損値が何行あるかを取得\n",
         "# pd.set_option('display.max_rows', 90) \n",
-        "dataset.isnull().sum()"
+        "dataset.isnull().sum()\n"
       ]
     }
   ],
