--- a/Lesson06_Regression-Model/課題2：住宅価格の回帰モデルの作成.ipynb
+++ b/Lesson06_Regression-Model/課題2：住宅価格の回帰モデルの作成.ipynb
@@ -54,24 +54,226 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "YNWdzlmtcocO"
       },
       "outputs": [],
       "source": [
-        "# データを変数datasetに読み込む\n"
+        "# データを変数datasetに読み込む\n",
+        "dataset = pd.read_csv(\"iowa_ames_housing_price.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "zUBOA0cucs4W"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Order</th>\n",
+              "      <th>area</th>\n",
+              "      <th>price</th>\n",
+              "      <th>MSSubClass</th>\n",
+              "      <th>MSZoning</th>\n",
+              "      <th>LotFrontage</th>\n",
+              "      <th>LotArea</th>\n",
+              "      <th>Street</th>\n",
+              "      <th>Alley</th>\n",
+              "      <th>LotShape</th>\n",
+              "      <th>...</th>\n",
+              "      <th>ScreenPorch</th>\n",
+              "      <th>PoolArea</th>\n",
+              "      <th>PoolQC</th>\n",
+              "      <th>Fence</th>\n",
+              "      <th>MiscFeature</th>\n",
+              "      <th>MiscVal</th>\n",
+              "      <th>MoSold</th>\n",
+              "      <th>YrSold</th>\n",
+              "      <th>SaleType</th>\n",
+              "      <th>SaleCondition</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>1710</td>\n",
+              "      <td>208500</td>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>65.0</td>\n",
+              "      <td>8450</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Reg</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>1262</td>\n",
+              "      <td>181500</td>\n",
+              "      <td>20</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>80.0</td>\n",
+              "      <td>9600</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Reg</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>2007</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>1786</td>\n",
+              "      <td>223500</td>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>68.0</td>\n",
+              "      <td>11250</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>9</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>1717</td>\n",
+              "      <td>140000</td>\n",
+              "      <td>70</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>60.0</td>\n",
+              "      <td>9550</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2006</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Abnorml</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>2198</td>\n",
+              "      <td>250000</td>\n",
+              "      <td>60</td>\n",
+              "      <td>RL</td>\n",
+              "      <td>84.0</td>\n",
+              "      <td>14260</td>\n",
+              "      <td>Pave</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>IR1</td>\n",
+              "      <td>...</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0</td>\n",
+              "      <td>12</td>\n",
+              "      <td>2008</td>\n",
+              "      <td>WD</td>\n",
+              "      <td>Normal</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>5 rows × 81 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Order  area   price  MSSubClass MSZoning  LotFrontage  LotArea Street  \\\n",
+              "0      1  1710  208500          60       RL         65.0     8450   Pave   \n",
+              "1      2  1262  181500          20       RL         80.0     9600   Pave   \n",
+              "2      3  1786  223500          60       RL         68.0    11250   Pave   \n",
+              "3      4  1717  140000          70       RL         60.0     9550   Pave   \n",
+              "4      5  2198  250000          60       RL         84.0    14260   Pave   \n",
+              "\n",
+              "  Alley LotShape  ... ScreenPorch PoolArea PoolQC Fence MiscFeature MiscVal  \\\n",
+              "0   NaN      Reg  ...           0        0    NaN   NaN         NaN       0   \n",
+              "1   NaN      Reg  ...           0        0    NaN   NaN         NaN       0   \n",
+              "2   NaN      IR1  ...           0        0    NaN   NaN         NaN       0   \n",
+              "3   NaN      IR1  ...           0        0    NaN   NaN         NaN       0   \n",
+              "4   NaN      IR1  ...           0        0    NaN   NaN         NaN       0   \n",
+              "\n",
+              "  MoSold YrSold SaleType  SaleCondition  \n",
+              "0      2   2008       WD         Normal  \n",
+              "1      5   2007       WD         Normal  \n",
+              "2      9   2008       WD         Normal  \n",
+              "3      2   2006       WD        Abnorml  \n",
+              "4     12   2008       WD         Normal  \n",
+              "\n",
+              "[5 rows x 81 columns]"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
-        "# データの最初の5行を表示\n"
+        "# データの最初の5行を表示\n",
+        "dataset.head(5)"
       ]
     },
     {
@@ -90,7 +292,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "hiMVKi3wcumE"
       },
@@ -105,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "iPFgNgq6d7M8"
       },
@@ -115,9 +317,10 @@
         "# numpy 配列に変換したものを変数 Y と X に格納する\n",
         "\n",
         "# Y:目的変数に該当する列\n",
+        "Y = np.array(dataset[target_col])\n",
         "\n",
-        "\n",
-        "# X:説明変数に該当する列\n"
+        "# X:説明変数に該当する列\n",
+        "X = np.array(dataset[feature_cols])\n"
       ]
     },
     {
@@ -133,24 +336,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "26cMzaEreWCL"
       },
       "outputs": [],
       "source": [
-        "# X と Y を 機械学習用データとテストデータに7:3で分ける(X_train, X_test, Y_train, Y_test)\n"
+        "# X と Y を 機械学習用データとテストデータに7:3で分ける(X_train, X_test, Y_train, Y_test)\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=0)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "-HKMiuIXejNE"
       },
       "outputs": [],
       "source": [
-        "# 機械学習用データを、学習データと検証データに7:3で分ける(X_train, X_valid, Y_train, Y_valid)\n"
+        "# 機械学習用データを、学習データと検証データに7:3で分ける(X_train, X_valid, Y_train, Y_valid)\n",
+        "X_train, X_valid, Y_train, Y_valid = train_test_split(X_train, Y_train, test_size=0.3, random_state=0)"
       ]
     },
     {
@@ -170,13 +375,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "i0-F4hTpeqL5"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MSE(1変数の線形回帰モデル): 1670916761.2011993\n"
+          ]
+        }
+      ],
       "source": [
-        "# 線形回帰モデルを作成し、学習・予測を実施して、MSEを算出する\n"
+        "# 線形回帰モデルを作成し、学習・予測を実施して、MSEを算出する\n",
+        "linear_model = LinearRegression()\n",
+        "# fit()で学習を実施\n",
+        "linear_model.fit(X_train, Y_train)\n",
+        "# predict()で予測を実施\n",
+        "Y_pred = linear_model.predict(X_valid)\n",
+        "# MSE（平均二乗誤差）を算出\n",
+        "linear_model_mse = mean_squared_error(Y_valid, Y_pred)\n",
+        "print('MSE(1変数の線形回帰モデル):', linear_model_mse)"
       ]
     },
     {
@@ -185,20 +406,60 @@
       "metadata": {
         "id": "-6aw688kfvbF"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MSE(回帰木): 2664083054.273616\n"
+          ]
+        }
+      ],
       "source": [
-        "# 回帰木のモデルを作成し、学習・予測を実施して、MSEを算出する\n"
+        "# 回帰木のモデルを作成し、学習・予測を実施して、MSEを算出する\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "\n",
+        "# データセットの分割。Xを使っていることに注意\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=0)\n",
+        "X_train, X_valid, Y_train, Y_valid = train_test_split(X_train, Y_train, test_size=0.3, random_state=0)\n",
+        "\n",
+        "tree_model = DecisionTreeRegressor()\n",
+        "tree_model.fit(X_train, Y_train)\n",
+        "Y_pred = tree_model.predict(X_valid)\n",
+        "\n",
+        "tree_model_mse = mean_squared_error(Y_valid, Y_pred)\n",
+        "print('MSE(回帰木):', tree_model_mse)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "UNRsa17wfz2Z"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "MSE(ランダムフォレスト): 1784879819.4065275\n"
+          ]
+        }
+      ],
       "source": [
-        "# ランダムフォレストのモデルを作成し、学習・予測を実施して、MSEを算出する\n"
+        "# ランダムフォレストのモデルを作成し、学習・予測を実施して、MSEを算出する\n",
+        "from sklearn.ensemble import RandomForestRegressor\n",
+        "\n",
+        "# データセットの分割。Xを使っていることに注意\n",
+        "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=0)\n",
+        "X_train, X_valid, Y_train, Y_valid = train_test_split(X_train, Y_train, test_size=0.3, random_state=0)\n",
+        "\n",
+        "randomforest_model = RandomForestRegressor(n_estimators=10, random_state=0)\n",
+        "randomforest_model.fit(X_train, Y_train)\n",
+        "Y_pred = randomforest_model.predict(X_valid)\n",
+        "\n",
+        "randomforest_model_mse = mean_squared_error(Y_valid, Y_pred)\n",
+        "print('MSE(ランダムフォレスト):', randomforest_model_mse)"
       ]
     },
     {
