課題3：タイタニック号の生存状況の分類モデル作成修正完了

--- a/Lesson07_Classification-Model/課題3：タイタニック号乗客の生存状況の分類モデル作成.ipynb
+++ b/Lesson07_Classification-Model/課題3：タイタニック号乗客の生存状況の分類モデル作成.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": 2,
       "metadata": {
         "id": "EInYuSc2JHNX"
       },
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": 3,
       "metadata": {
         "id": "lz-PggfGL_8x"
       },
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": 4,
       "metadata": {
         "id": "LJdbeGwlMGbB"
       },
@@ -230,7 +230,7 @@
               "4    man        True  NaN  Southampton    no   True  "
             ]
           },
-          "execution_count": 193,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": 5,
       "metadata": {
         "id": "jVlsbngKMPG3"
       },
@@ -284,7 +284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 195,
+      "execution_count": 6,
       "metadata": {
         "id": "dTIs48AFNXoO"
       },
@@ -389,7 +389,7 @@
               "4         0       3    male  35.0      0      0   8.0500        S"
             ]
           },
-          "execution_count": 195,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -419,7 +419,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 196,
+      "execution_count": 7,
       "metadata": {
         "id": "VQFcOcGlNkrp"
       },
@@ -542,7 +542,7 @@
               "max      1.000000    3.000000   80.000000    8.000000    6.000000  512.329200"
             ]
           },
-          "execution_count": 196,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -563,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 8,
       "metadata": {
         "id": "86RHxbsmovmM"
       },
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": 9,
       "metadata": {
         "id": "42JjLjJPo4Kj"
       },
@@ -609,7 +609,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\yomi\\AppData\\Local\\Temp\\ipykernel_10284\\3979081683.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "C:\\Users\\yomi\\AppData\\Local\\Temp\\ipykernel_3160\\3979081683.py:3: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -627,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -665,7 +665,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 11,
       "metadata": {
         "id": "NOe3rABEpacX"
       },
@@ -680,7 +680,7 @@
               "Name: count, dtype: int64"
             ]
           },
-          "execution_count": 200,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -701,7 +701,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 12,
       "metadata": {
         "id": "Faq_eB30qfHF"
       },
@@ -710,7 +710,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\yomi\\AppData\\Local\\Temp\\ipykernel_10284\\311320692.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+            "C:\\Users\\yomi\\AppData\\Local\\Temp\\ipykernel_3160\\311320692.py:2: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
             "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
             "\n",
             "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -736,7 +736,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": 13,
       "metadata": {
         "id": "0F6FqAlwqoYC"
       },
@@ -775,7 +775,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 14,
       "metadata": {
         "id": "V5YCZdd1qtxw"
       },
@@ -787,7 +787,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 206,
+      "execution_count": 15,
       "metadata": {
         "id": "NuWwmcTwrr52"
       },
@@ -917,7 +917,7 @@
               "4       False       False        True  "
             ]
           },
-          "execution_count": 206,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -952,7 +952,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 207,
+      "execution_count": 16,
       "metadata": {
         "id": "3VTkw80mrsKy"
       },
@@ -967,7 +967,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 208,
+      "execution_count": 17,
       "metadata": {
         "id": "zvOHEbKnsa_I"
       },
@@ -998,7 +998,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 209,
+      "execution_count": 18,
       "metadata": {
         "id": "mfiTpx0NscZY"
       },
@@ -1010,7 +1010,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 210,
+      "execution_count": 19,
       "metadata": {
         "id": "hCPzHIXYsuHW"
       },
@@ -1022,7 +1022,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 211,
+      "execution_count": 20,
       "metadata": {
         "id": "XsBDH_A2swJl"
       },
@@ -1053,7 +1053,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 212,
+      "execution_count": 21,
       "metadata": {
         "id": "9xvP1N7ksyIE"
       },
@@ -1078,7 +1078,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "HSMqJrrCtCRN"
       },
@@ -1089,7 +1089,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
@@ -1125,7 +1125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -1148,14 +1148,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.7605633802816901\n"
+            "0.7464788732394366\n"
           ]
         }
       ],
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -1205,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 27,
       "metadata": {
         "id": "HGC4Ud3YujSN"
       },
@@ -1217,7 +1217,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 28,
       "metadata": {
         "id": "r88C6Ix7uqoq"
       },
@@ -1230,7 +1230,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 221,
+      "execution_count": 29,
       "metadata": {
         "id": "Ezbl7chou4SG"
       },
@@ -1245,7 +1245,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 222,
+      "execution_count": 30,
       "metadata": {
         "id": "qX2iEosnu98q"
       },
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 224,
+      "execution_count": 31,
       "metadata": {
         "id": "rm7WuLwKvFm-"
       },
@@ -1270,7 +1270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 225,
+      "execution_count": 32,
       "metadata": {
         "id": "OJdSlEPBvMpG"
       },
@@ -1697,7 +1697,7 @@
               "             param_grid={&#x27;max_depth&#x27;: [5, 10, 50],\n",
               "                         &#x27;n_estimators&#x27;: [10, 50, 100]})</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item sk-dashed-wrapped\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" ><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>GridSearchCV</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.model_selection.GridSearchCV.html\">?<span>Documentation for GridSearchCV</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></div></label><div class=\"sk-toggleable__content fitted\"><pre>GridSearchCV(cv=3, estimator=RandomForestClassifier(),\n",
               "             param_grid={&#x27;max_depth&#x27;: [5, 10, 50],\n",
-              "                         &#x27;n_estimators&#x27;: [10, 50, 100]})</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>best_estimator_: RandomForestClassifier</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(max_depth=5, n_estimators=50)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestClassifier.html\">?<span>Documentation for RandomForestClassifier</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(max_depth=5, n_estimators=50)</pre></div> </div></div></div></div></div></div></div></div></div>"
+              "                         &#x27;n_estimators&#x27;: [10, 50, 100]})</pre></div> </div></div><div class=\"sk-parallel\"><div class=\"sk-parallel-item\"><div class=\"sk-item\"><div class=\"sk-label-container\"><div class=\"sk-label fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" ><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>best_estimator_: RandomForestClassifier</div></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(max_depth=5)</pre></div> </div></div><div class=\"sk-serial\"><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" ><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow\"><div><div>RandomForestClassifier</div></div><div><a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.6/modules/generated/sklearn.ensemble.RandomForestClassifier.html\">?<span>Documentation for RandomForestClassifier</span></a></div></label><div class=\"sk-toggleable__content fitted\"><pre>RandomForestClassifier(max_depth=5)</pre></div> </div></div></div></div></div></div></div></div></div>"
             ],
             "text/plain": [
               "GridSearchCV(cv=3, estimator=RandomForestClassifier(),\n",
@@ -1705,7 +1705,7 @@
               "                         'n_estimators': [10, 50, 100]})"
             ]
           },
-          "execution_count": 225,
+          "execution_count": 32,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1717,7 +1717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 226,
+      "execution_count": 33,
       "metadata": {
         "id": "qUL9ispJvSYN"
       },
@@ -1725,10 +1725,10 @@
         {
           "data": {
             "text/plain": [
-              "{'max_depth': 5, 'n_estimators': 50}"
+              "{'max_depth': 5, 'n_estimators': 100}"
             ]
           },
-          "execution_count": 226,
+          "execution_count": 33,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1749,7 +1749,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 227,
+      "execution_count": 34,
       "metadata": {
         "id": "doYjPMUovZ77"
       },
@@ -1767,7 +1767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 228,
+      "execution_count": 35,
       "metadata": {
         "id": "yULwXTP0wABh"
       },
@@ -1776,7 +1776,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.746031746031746\n"
+            "0.7384615384615385\n"
           ]
         }
       ],
@@ -1798,7 +1798,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 229,
+      "execution_count": 36,
       "metadata": {
         "id": "G194ua48wFIh"
       },
@@ -1807,13 +1807,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "0.47297297297297297\n"
+            "0.7340425531914894\n"
           ]
         }
       ],
       "source": [
         "# テストデータを使って予測を行いF1値を算出\n",
-        "Y_pred = svm_model.predict(X_test)\n",
+        "Y_pred = randomforest_model.predict(X_test)\n",
         "print(f1_score(Y_test, Y_pred))"
       ]
     }
